force-app/main/default/objects/Form_LCF_Commissioner_1__c/Form_LCF_Commissioner_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Full Application - Commissioner - 1.0</description>
    <label>Form LCF Commissioner 1.0</label>
    <nameField>
        <displayFormat>COM-{00000}</displayFormat>
        <label>Commissioner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF Commissioner 1.0</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>