force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/application__c.field-meta.xml
<CustomField>
    <fullName>application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipName>app_commissioners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>