force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/co_contact_number__c.field-meta.xml
<CustomField>
    <fullName>co_contact_number__c</fullName>
    <inlineHelpText>Contact number</inlineHelpText>
    <label>CO - Contact Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>