force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/co_email__c.field-meta.xml
<CustomField>
    <fullName>co_email__c</fullName>
    <inlineHelpText>Email address</inlineHelpText>
    <label>CO - Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>