force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/co_job_title__c.field-meta.xml
<CustomField>
    <fullName>co_job_title__c</fullName>
    <inlineHelpText>Job title</inlineHelpText>
    <label>CO - Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>