force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/co_lead_contact_name__c.field-meta.xml
<CustomField>
    <fullName>co_lead_contact_name__c</fullName>
    <inlineHelpText>Name of lead contact</inlineHelpText>
    <label>CO - Lead Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>