force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/co_organisation_name__c.field-meta.xml
<CustomField>
    <fullName>co_organisation_name__c</fullName>
    <inlineHelpText>Name of organisation</inlineHelpText>
    <label>CO - Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>