force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/eoi__c.field-meta.xml
<CustomField>
    <fullName>eoi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form LCF EOI 1.0</label>
    <referenceTo>Form_LCF_EOI_1__c</referenceTo>
    <relationshipName>eoi_commissioners</relationshipName>
    <type>Lookup</type>
</CustomField>