force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_interventions_users_low__c.field-meta.xml
<CustomField>
    <fullName>st_interventions_users_low__c</fullName>
    <inlineHelpText>Lower</inlineHelpText>
    <label>ST - Interventions Users Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>