force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_interventions_users_median__c.field-meta.xml
<CustomField>
    <fullName>st_interventions_users_median__c</fullName>
    <inlineHelpText>Median</inlineHelpText>
    <label>ST - Interventions Users Median</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>