force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_lcf_outcome_payments_median__c.field-meta.xml
<CustomField>
    <fullName>st_lcf_outcome_payments_median__c</fullName>
    <inlineHelpText>Median</inlineHelpText>
    <label>ST - LCF Outcome Payments Median</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>