force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_lead_contact_email__c.field-meta.xml
<CustomField>
    <fullName>st_lead_contact_email__c</fullName>
    <inlineHelpText>Email address</inlineHelpText>
    <label>ST - Lead Contact Email</label>
    <type>Email</type>
</CustomField>