force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_lead_contact_first_name__c.field-meta.xml
<CustomField>
    <fullName>st_lead_contact_first_name__c</fullName>
    <inlineHelpText>First name of lead contact</inlineHelpText>
    <label>ST - Lead Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>