force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_lead_contact_full_name__c.field-meta.xml
<CustomField>
    <fullName>st_lead_contact_full_name__c</fullName>
    <description>Lead Contact Full Name</description>
    <formula>st_lead_contact_first_name__c + " " + st_lead_contact_last_name__c</formula>
    <inlineHelpText>Lead Contact Full Name</inlineHelpText>
    <label>ST - Lead Contact Full Name</label>
    <type>Text</type>
</CustomField>