force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_lead_contact_job_title__c.field-meta.xml
<CustomField>
    <fullName>st_lead_contact_job_title__c</fullName>
    <inlineHelpText>Job title</inlineHelpText>
    <label>ST - Lead Contact Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>