force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_lead_contact_mobile__c.field-meta.xml
<CustomField>
    <fullName>st_lead_contact_mobile__c</fullName>
    <defaultValue>&#39;N/A&#39;</defaultValue>
    <inlineHelpText>Mobile phone (optional)</inlineHelpText>
    <label>ST - Lead Contact Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>