force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_lead_contact_phone__c.field-meta.xml
<CustomField>
    <fullName>st_lead_contact_phone__c</fullName>
    <inlineHelpText>Phone number</inlineHelpText>
    <label>ST - Lead Contact Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>