force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_organisation_other_type__c.field-meta.xml
<CustomField>
    <fullName>st_organisation_other_type__c</fullName>
    <description>For example: Evaluator, Analyst, Specialist intermediary</description>
    <inlineHelpText>If Other, please specify the type of organisation in words</inlineHelpText>
    <label>ST - Organisation Other Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>