force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_organisation_region__c.field-meta.xml
<CustomField>
    <fullName>st_organisation_region__c</fullName>
    <description>Please select either &#39;England wide&#39; or one or more regions of England</description>
    <inlineHelpText>What region is the organisation in?</inlineHelpText>
    <label>ST - Organisation Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Region</valueSetName>
    </valueSet>
</CustomField>