force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_organisation_sector__c.field-meta.xml
<CustomField>
    <fullName>st_organisation_sector__c</fullName>
    <inlineHelpText>What sector is the stakeholder from?</inlineHelpText>
    <label>ST - Organisation Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector_of_Organisation</valueSetName>
    </valueSet>
</CustomField>