force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_organisation_type__c.field-meta.xml
<CustomField>
    <fullName>st_organisation_type__c</fullName>
    <inlineHelpText>What type of organisation is the stakeholder?</inlineHelpText>
    <label>ST - Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Type</valueSetName>
    </valueSet>
</CustomField>