force-app/main/default/objects/Form_LCF_Commissioner_1__c/fields/st_outcome_payments_high__c.field-meta.xml
<CustomField>
    <fullName>st_outcome_payments_high__c</fullName>
    <inlineHelpText>High</inlineHelpText>
    <label>ST - Outcome Payments High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>