force-app/main/default/objects/Form_LCF_Commissioner_1__c/recordTypes/Full_Application.recordType-meta.xml
<RecordType>
    <fullName>Full_Application</fullName>
    <active>true</active>
    <description>Full Application Commissioner Record Type</description>
    <label>Full Application</label>
</RecordType>