force-app/main/default/objects/Form_LCF_Commissioner_1__c/recordTypes/Setup.recordType-meta.xml
<RecordType>
    <fullName>Setup</fullName>
    <active>true</active>
    <description>Stakeholder record used in Full Award Setup form</description>
    <label>Setup</label>
</RecordType>