force-app/main/default/objects/Form_LCF_Commissioner_1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>primary__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>eoi__c</columns>
    <columns>full_application__c</columns>
    <columns>st_organisation_name__c</columns>
    <columns>st_organisation_region__c</columns>
    <columns>st_lead_contact_first_name__c</columns>
    <columns>st_lead_contact_last_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>